--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="container">
         <div class="text-container">
             <h1 class="text"> WELCOME</h1>
-            <p class="utama"> THE NEXT RACE!</p>
-            <p class="kedua">TODAY 8 JUNE</p>
+            <p class="utama"> STAY TUNE FOR THE NEXT RACE!</p>
+            <p class="kedua">NO RACE!</p>
         </div>
 
         <div class="container-image">
