--- a/index.html
+++ b/index.html
@@ -2,35 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>MEDIA MALAM</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="semua">
-
-    <div class="overlay"></div>
+ <div class="all">
     <video autoplay loop muted plays-inline class="back-video">
         <source src="./video/WhatsApp Video 2023-08-07 at 15.05.44.mp4">
     </video>
 
 
-        <nav>
+
             <div class="background"></div>
-            <div class="all">
+            <div class="pic">
             <img src="./foto/media malam logo.png" class="logo">
             </div>
-        </nav>
+
 
     <div class="container">
         <div class="text-container">
             <h1 class="text"> WELCOME</h1>
-            <p class="utama"> STAY TUNE FOR THE NEXT RACE!</p>
-            <p class="kedua">NO RACE!</p>
+            <p class="first"> THE NEXT RACE!</p>
+            <p class="second">TODAY 8 JUNE</p>
         </div>
 
-        <div class="container-image">
-            </div>
        </div>        
     </div>
  
