--- a/index.html
+++ b/index.html
@@ -2,34 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDIA MALAM</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="all">
+ <div class="semua">
+
+    <div class="overlay"></div>
     <video autoplay loop muted plays-inline class="back-video">
         <source src="./video/WhatsApp Video 2023-08-07 at 15.05.44.mp4">
     </video>
 
 
-
+        <nav>
             <div class="background"></div>
-            <div class="pic">
+            <div class="all">
             <img src="./foto/media malam logo.png" class="logo">
             </div>
+        </nav>
 
-
-    <div class="container">
+  <div class="container">
         <div class="text-container">
             <h1 class="text"> WELCOME</h1>
-            <p class="first"> THE NEXT RACE!</p>
-            <p class="second">TODAY 8 JUNE</p>
+            <p class="utama"> THE NEXT RACE!</p>
+            <p class="kedua">TODAY 8 JUNE</p>
+            <p class="utama"> STAY TUNE FOR THE NEXT RACE!</p>
+            <p class="kedua">NO RACE!</p>
         </div>
 
+        <div class="container-image">
+
+            </div>
        </div>        
     </div>
- 
+
 </div>
 </body>
 </html>
