--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav>
             <div class="background"></div>
-            <div class="all">
+            <div class="semua">
             <img src="./foto/media malam logo.png" class="logo">
             </div>
         </nav>
